--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,12 @@
     <div id="qr"></div>
     <div id="status">Waiting for QR code...</div>
     <ul id="chats"></ul>
+    <h2>Send Message</h2>
+    <input id="to" placeholder="Phone number or chat id">
+    <input id="messageInput" placeholder="Message">
+    <button id="send">Send</button>
+    <h2>Messages</h2>
+    <ul id="messages"></ul>
 
     <script src="/socket.io/socket.io.js"></script>
     <script>
@@ -37,6 +43,22 @@
                 li.textContent = c;
                 ul.appendChild(li);
             });
+        });
+
+        document.getElementById('send').addEventListener('click', () => {
+            const to = document.getElementById('to').value;
+            const message = document.getElementById('messageInput').value;
+            fetch('/send', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ to, message })
+            });
+        });
+
+        socket.on('message', m => {
+            const li = document.createElement('li');
+            li.textContent = `${m.from}: ${m.body}`;
+            document.getElementById('messages').appendChild(li);
         });
     </script>
 </body>
